fix(text-editor): better align the content with the `label` & `helperText`

--- a/src/components/text-editor/text-editor.scss
+++ b/src/components/text-editor/text-editor.scss
@@ -9,7 +9,7 @@
 }
 
 :host(limel-text-editor) {
-    --limel-text-editor-padding: 0.75rem;
+    --limel-text-editor-padding: 0.75rem 1rem;
     position: relative;
     isolation: isolate;
     display: flex;
